add infinite carousel

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="js/slider-box.js" charset="utf-8"></script>
   <script src="js/slider-testimonials.js" charset="utf-8"></script>
+  <script src="js/nth-slider.js" charset="utf-8"></script>
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <title></title>
@@ -15,7 +17,7 @@
       <div class="slide">
         <div class="text">
           <span>Bali</span>
-          <p>Lorem ipsum dolor sit amet, sed do eiusmod tempor </p>
+          <p>Lorem ipsum dolor sit amet, sed do eiusmod tempor</p>
         </div>
       </div>
       <div class="slide">
@@ -42,7 +44,7 @@
     <div class="slides-control-wrapper"></div>
   </div>
 
-
+<hr>
 
   <div class="testimonials-slider">
     <div class="slider-head">
@@ -126,7 +128,52 @@
     </div>
   </div>
 
+  <hr>
 
+  <div class="nth-item-slider">
+    <div class="nth-item-slider-wrapper">
+      <div class="slider-slide">
+        1
+        <img src="img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        2
+        <img src="./img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        3
+        <img src="img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        4
+        <img src="img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        5
+        <img src="./img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        6
+        <img src="img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        7
+        <img src="img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        8
+        <img src="./img/bg.jpeg" alt="">
+      </div>
+      <div class="slider-slide">
+        9
+        <img src="img/bg.jpeg" alt="">
+      </div>
+    </div>
+    <div class="nth-slides-control-wrapper"></div>
+  </div>
+
+
+<hr>
 </body>
 
 </html>
